# DAWBackup

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: workflow-walkthrough.md
spb/: __init__.py  __main__.py  config.py  constants.py
spb/cli/: __init__.py  main.py
spb/core/: __init__.py  backup.py  shared.py
spb/services/: __init__.py  manifest.py  watcher.py
tests/: test_backup.py  test_cli.py  test_config.py  test_units.py  test_watcher.py
